Fix search related bugs: Highlight search hits in blog comments. And make sure search hits are aligned properly.
git-svn-id: https://repos.nextthought.com/svn/nti-svn/NextThoughtWebApp/trunk@18243 3dfb626b-079f-4ab1-a9f6-4654e5377508

--- a/src/main/resources/scss/_forums.scss
+++ b/src/main/resources/scss/_forums.scss
@@ -535,7 +535,8 @@
 
 		.post-view .searchHit-overlay{
 			left: 0px;
-			z-index: -1;
+			z-index: 999;
+			pointer-events:none;
 		}
 
 		.entry {
